--- a/Snakemake/ChIP-Seq_pipeline/Snakefile
+++ b/Snakemake/ChIP-Seq_pipeline/Snakefile
@@ -1,8 +1,9 @@
 READS = ["p1_DM_H3K4_boeckel_R1"]
 INPUTREADS=["p1_DM_input_boeckel_R1"]
+genome="/media/ATLAS_Genomes_Annotations/human/GRCH38/primary_assembly/star_index"
 
 rule all:
-	input: expand("{read}_Annotation.txt", read=READS)
+	input: expand("Annotations/{read}_Annotation.txt", read=READS)
 
 rule fastqc:
 	input: "{reads}.fastq"
@@ -12,7 +13,7 @@ rule fastqc:
 rule readMapping:
 	input: a=expand("{reads}.fastq", reads=READS+INPUTREADS),
 		   b=expand("FastQCfiles/{reads}_fastqc/fastqc_data.txt",reads=READS+INPUTREADS), 
-		   c="/media/ATLAS_Genomes_Annotations/human/GRCH38/primary_assembly/star_index"
+		   c=genome
 	output: expand("{reads}_mapped/Aligned.out.sam", reads=READS+INPUTREADS)
 	run:
 		for i in input.b:
@@ -38,12 +39,15 @@ rule makeTagDir:
 
 rule peakCalling:
 	input: expand("{read}Tags", read=READS),expand("{inputread}Tags", inputread=INPUTREADS)
-	output: "{read}Tags/regions.txt"
-	shell: "findPeaks {input[0]} -style histone -o auto -i {input[1]}"
+	output: "Peaks/{read}_Peaks.txt"
+	shell: "findPeaks {input[0]} -style factor -o {output} -i {input[1]}"
 
 rule annotatePeaks:
-	input: "{read}Tags/regions.txt"
-	output: "{read}_Annotation.txt"
-	shell: "annotatePeaks.pl {input} /media/ATLAS_Genomes_Annotations/human/GRCH38/primary_assembly/star_index > {output}"
-
+	input: "Peaks/{read}_Peaks.txt"
+	output: "Annotations/{read}_Annotation.txt"
+	shell: """
+		   pos2bed.pl {input} > Peaks/{wildcards.read}_Peaks.bed
+		   awk 'BEGIN{{OFS="\t";FS="\t"}}{{print "chr"$0}}' Peaks/{wildcards.read}_Peaks.bed > Peaks/{wildcards.read}_Peaks.chr.bed
+		   annotatePeaks.pl Peaks/{wildcards.read}_Peaks.chr.bed hg38 -annStats "Annotations/{wildcards.read}_AnnStats.txt" > "Annotations/{wildcards.read}_Annotation.txt" 
+		   """
 
